GNOME Bugzilla – Bug 756280
GDrive sync freezes main UI
Last modified: 2015-10-14 10:22:23 UTC
While Nautilus connects to GDrive and syncs all the folders and files, the main UI freezes and cannot be interacted with until all files and folders are synced and displayed.
Saw it myself, I think is the check for the filesystem type. ->3.18
Then the check for filesystem type have to be done asynchronously if it is not. Especially google backend is really slow if there is a lot of files on the drive...
Created attachment 313253 [details] [review] file: get filesystem type asynchronously We were peeking the filesystem type synchronously since nautilus was checking for some file infos that are only required once synchronously. However the call for the filesystem is usually slow which makes nautilus main thread hang. To avoid I/O in the main thread, make the filesystem type request asynchronously and part of all the others attributes for the file.
Attachment 313253 [details] pushed as bfd9ccf - file: get filesystem type asynchronously